--- a/code.html
+++ b/code.html
@@ -30,6 +30,7 @@
                         <span class="like"><i class="fa-regular fa-thumbs-up" style="color: #ffffff;"></i> 200</span>
                         <span class="dislike"><i class="fa-regular fa-thumbs-down" style="color: #ffffff;"></i> 5</span>
                         <span class="share"><i class="fa-solid fa-share" style="color: #ffffff;"></i></span>
+                        <span class="hint"><i class="fa-regular fa-lightbulb" style="color: #ffffff;"></i></span>
                     </div>
                     <div class="question">
                         <span class="ques-no">1.</span>
@@ -52,8 +53,11 @@
                 </div>
                 <div id="editor"></div>
                 <div class="lower">
-                    <div class="run-btn">Run</div>
-                    <div class="submit-btn">Submit</div>
+                    <div class="console">Console</div>
+                    <div class="right">
+                        <div class="run-btn">Run</div>
+                        <div class="submit-btn">Submit</div>
+                    </div>
                 </div>
             </div>
         </div>
