next-prev btns added

--- a/code.html
+++ b/code.html
@@ -42,6 +42,10 @@
                         <iframe src="ex.html" frameborder="0" height="300"></iframe>
                     </div>
                 </div>
+                <div class="lower">
+                    <span><i class="fa-solid fa-backward" style="color: #ffffff;"></i> PREV</span>
+                    <span>NEXT <i class="fa-solid fa-forward" style="color: #ffffff;"></i></span>
+                </div>
             </div>
             <div class="section-2">
                 <div class="header">
