--- a/code.html
+++ b/code.html
@@ -16,6 +16,23 @@
             <div class="brand">
                 DEV learner
             </div>
+            <div class="mob-section">
+                <div class="project-list">
+                    <a href="">Projects </a>
+                </div>
+                <div class="playground">
+                    <a href="">CodePlay <i class="fa-solid fa-code" style="color: #ffffff;"></i></a>
+                </div>
+                <div class="1v1">
+                    <a href="">1v1</a>
+                </div>
+                <div class="streak">
+                    <a href=""><i class="fa-solid fa-fire" style="color: #ffffff;"></i></a>
+                </div>
+                <div class="user">
+                    <a href="">Guest</a>
+                </div>
+            </div>
         </nav>
         <div class="content">
             <div class="section-1">
@@ -35,7 +52,7 @@
                     <div class="question">
                         <span class="ques-no">1.</span>
                         <span class="ques-heading">Creating a main heading for App.</span>
-                        <div class="ques-info">You have to center the heading tag.</div>
+                        <div class="ques-info">You have to center the heading.</div>
                     </div>
                     <div class="preview">
                         <p>Preview:</p>
@@ -43,8 +60,13 @@
                     </div>
                 </div>
                 <div class="lower">
-                    <span><i class="fa-solid fa-backward" style="color: #ffffff;"></i> PREV</span>
-                    <span>NEXT <i class="fa-solid fa-forward" style="color: #ffffff;"></i></span>
+                    <div class="problem-list">
+                        <span>Problem List <i class="fa-solid fa-list" style="color: #ffffff;"></i></span>
+                    </div>
+                    <div class="move-btns">
+                        <span><i class="fa-solid fa-backward" style="color: #ffffff;"></i> PREV</span>
+                        <span>NEXT <i class="fa-solid fa-forward" style="color: #ffffff;"></i></span>
+                    </div>
                 </div>
             </div>
             <div class="section-2">
