--- a/code.html
+++ b/code.html
@@ -54,6 +54,19 @@
                         <span class="ques-heading">Creating a main heading for App.</span>
                         <div class="ques-info">You have to center the heading.</div>
                     </div>
+                    <div class="example">
+                        <div id="ex-editor"></div>
+                    </div>
+                    <!-- <pre class="code-preview">
+                        <code>
+                          &lt;div class=&quot;calculator-card&quot;&gt;
+                            &lt;div class=&quot;input-div&quot;&gt;
+                            &lt;/div&gt;
+                            &lt;div class=&quot;buttons&quot;&gt;
+                            &lt;/div&gt;
+                          &lt;/div&gt;
+                        </code>
+                      </pre> -->
                     <div class="preview">
                         <p>Preview:</p>
                         <iframe src="ex.html" frameborder="0" height="300"></iframe>
