--- a/ex.html
+++ b/ex.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="ex.css">
+    <link rel="stylesheet" href="/styles/ex.css">
 </head>
 
 <body>
@@ -29,5 +29,5 @@
         </div>
 </body>
 
-    <script src="ex.js"></script>
+    <script src="/scripts/ex.js"></script>
 </html>
