--- a/calculator.html
+++ b/calculator.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="/styles/calculator.css">
-</head>
-<body>
-    <div class="calculator-card">
-        <div class="display">
-           0
-        </div>
-        <div class="buttons">
-            <button>AC</button>
-            <button>DEL</button>
-            <button>%</button>
-            <button>/</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>*</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>-</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>+</button>
-            <button>^</button>
-            <button>0</button>
-            <button>.</button>
-            <button>=</button>
-        </div>
-    </div>
-
-    <script src="/scripts/calculator.js"></script>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Project</title>
+        <link rel="stylesheet" href="/styles/calculator.css">
+        <script src="/scripts/calculator.js"></script>
+    </head><body>
+  <div class="a">
+    <!-- Write your code here -->
+  </div>
+  <div style="color: white">ffffffkkkkkk</div>
 </body>
 </html>
