--- a/calculator.html
+++ b/calculator.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
+        <html lang="en">
+        <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project</title>
         <link rel="stylesheet" href="/styles/calculator.css">
         <script src="/scripts/calculator.js"></script>
-    </head><body>
+    </head><body style="color: white">
   <div class="a">
-    <!-- Write your code here -->
   </div>
-  <div style="color: white">ffffffkkkkkk</div>
 </body>
 </html>
