--- a/calculator.html
+++ b/calculator.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-        <html lang="en">
-        <head>
+    <html lang="en">
+    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Project</title>
         <link rel="stylesheet" href="/styles/calculator.css">
         <script src="/scripts/calculator.js"></script>
-    </head><body style="color: white">
+    </head><body>
   <div class="a">
+    <!-- Write your code here -->
   </div>
 </body>
 </html>
