prettier req fixed

--- a/calculator.html
+++ b/calculator.html
@@ -6,9 +6,4 @@
         <title>Project</title>
         <link rel="stylesheet" href="/styles/calculator.css">
         <script src="/scripts/calculator.js"></script>
-    </head><body>
-  <div class="a">
-    <!-- Write your code here -->
-  </div>
-</body>
-</html>
+    </head>fah aj </html>
