next question creation fixed

--- a/calculator.html
+++ b/calculator.html
@@ -6,4 +6,10 @@
         <title>Project</title>
         <link rel="stylesheet" href="/styles/calculator.css">
         <script src="/scripts/calculator.js"></script>
-    </head>fah aj </html>
+    </head><body>
+  <div class="a">
+    <!-- Write your code here -->
+    hn
+  </div>
+</body>
+</html>
