--- a/ex.html
+++ b/ex.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Calculator</title>
     <link rel="stylesheet" href="/styles/ex.css">
 </head>
-
 <body>
-        <h1>Quiz App</h1>
-        <div class="card">
-            <div class="header">
-                <h2 id="question">Question</h2>
-                <ul>
-                    <li><input type="radio" id="a" class="answer" name="answer"><label for="a" id="a-text">a</label>
-                    </li>
-                    <li><input type="radio" id="b" class="answer" name="answer"><label for="b" id="b-text">b</label>
-                    </li>
-                    <li><input type="radio" id="c" class="answer" name="answer"><label for="c" id="c-text">c</label>
-                    </li>
-                    <li><input type="radio" id="d" class="answer" name="answer"><label for="d" id="d-text">d</label>
-                    </li>
-                </ul>
-            </div>
-            <button id="submit">Submit</button>
+    <div class="calculator-card">
+        <div class="input-div">
+            <div class="input-text">0</div>
         </div>
-</body>
+        <div class="buttons">
+            <div>AC</div>
+            <div>DEL</div>
+            <div>%</div>
+            <div>/</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>*</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>-</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>+</div>
+            <div>^</div>
+            <div>0</div>
+            <div>.</div>
+            <div>=</div>
+        </div>
+    </div>
 
     <script src="/scripts/ex.js"></script>
+</body>
 </html>
