--- a/ex-play.html
+++ b/ex-play.html
@@ -9,10 +9,10 @@
 <body>
     <div class="indicator">
         <output name="result" for="completion">50</output>
-      </div>
+    </div>
       
       <input id="completion" type="range" min="0" max="100">
 
-      <link rel="stylesheet" href="/scripts/ex-play.js">
+    <script src="/scripts/ex-play.js"></script>
 </body>
 </html>
